# citation_arbitrage

./: .gitignore  ACTION_PLAN.md  DASHBOARD.md  EXAMPLE.md  FULL_RUN_COMPLETE.md  HISTORICAL_VALIDATION.md  PROJECT_SUMMARY.md  README.md  REAL_RUN_RESULTS.md  pyproject.toml
citation_arbitrage/: author_analysis.py  citation_graph.py  cli.py  models.py  openalex_client.py
data/analysis/: COMPANIES.csv  COMPANIES_ENRICHED.csv  FILTERED_LEADS.csv  INVESTMENT_LEADS.csv  INVESTMENT_LEADS_ENRICHED.csv  LINKEDIN_PROCESS.md  LINKEDIN_REPORT.md  RESEARCH_REPORT.md  TOP_100_BY_COMPANY.md  TOP_100_LEADS.md  all_authors.yaml  companies_of_interest.yaml  grad_students.yaml  investment_leads.yaml
data/authors/: A5000035954.yaml  A5000036560.yaml  A5000101136.yaml  A5000168834.yaml  A5000180075.yaml  A5000211820.yaml  A5000262567.yaml  A5000272697.yaml  A5000276647.yaml  A5000300751.yaml  A5000319899.yaml  A5000364987.yaml  A5000392910.yaml  A5000413092.yaml  A5000426798.yaml  A5000465232.yaml  A5000474748.yaml  A5000476605.yaml  A5000545244.yaml  A5000683457.yaml  A5000717557.yaml  A5000732341.yaml  A5000779664.yaml  A5000780116.yaml  A5000788984.yaml  A5000795130.yaml  A5000816678.yaml  A5000849745.yaml  A5000869716.yaml  A5000933955.yaml  A5001026049.yaml  A5001041310.yaml  (+3530 more)
scripts/: analyze_investment_leads.py  batch_fetch_authors.py  create_collaboration_network.py  create_linkedin_report.py  enrich_company_data.py  filter_investment_leads.py  generate_top_100_report.py  lookup_company_tickers.py  quick_visualize.py  visualize_company_clusters.py  visualize_network.py
(+5000 files in other folders)
